[build-system]
requires = ["flit_core >=3.2.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "warehouse_theatre"
version = "0.0.1"
description = "Theatre-style warehouse storage capacity visualization for ERPNext"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["frappe"]

[tool.flit.module]
name = "warehouse_theatre"
